Add sounds, some ui, webpack devsrv, plugins

--- a/src/ui/_variables.scss
+++ b/src/ui/_variables.scss
@@ -1,3 +1,4 @@
+// PIGMENTS: cmd-shift-alt-j
 // http://paletton.com/#uid=6390R0kcSNOdWWldISwb1IH7ABW
 $color-aqua-0: #83DBC2;
 $color-aqua-1: #89F2D5;
