--- a/src/ui/_variables.scss
+++ b/src/ui/_variables.scss
@@ -43,6 +43,7 @@ $color-green-1: #EAF7D7;
 $color-green-2: #C3E591;
 $color-green-3: #4F7913;
 $color-green-4: #233C00;
+$color-ui-green-1: #496422;
 
 $color-whiskey-0: #BD8549;
 $color-whiskey-1: #FFEFDE;
@@ -58,3 +59,6 @@ $color-ocean-blue-4: #02A1FF;
 
 $color-grey: #969696;
 $color-light-grey: #CACACA;
+$color-slight-grey-1: #E4E4E4;
+
+$color-white: #FFFFFF;
