--- a/src/ui/planetPanel/planetPanel.scss
+++ b/src/ui/planetPanel/planetPanel.scss
@@ -116,7 +116,7 @@ $panel-width: 440px;
         display: inline-block;
         animation: progress 5s;
         position: absolute;
-        height: 100%;
+        height: 80px;
         left: 0;
       }
     }
@@ -144,7 +144,7 @@ $panel-width: 440px;
     margin: 0 auto;
     text-align: center;
     font-size: 28px;
-    padding-top: 14px;
+    padding-top: 6px;
     cursor: pointer;
     border: 1px solid $color-navy-blue-2;
     
@@ -165,7 +165,7 @@ $panel-width: 440px;
     
     img.medium-icon {
       left: 62px;
-      top: 8px;
+      top: 0;
     }
   }
   
