Add initial buildings, fix tooltips, add received yield icons

--- a/src/ui/_variables.scss
+++ b/src/ui/_variables.scss
@@ -44,6 +44,7 @@ $color-green-2: #C3E591;
 $color-green-3: #4F7913;
 $color-green-4: #233C00;
 $color-ui-green-1: #496422;
+$color-ui-green-2: #7D8B69;
 
 $color-whiskey-0: #BD8549;
 $color-whiskey-1: #FFEFDE;
@@ -60,5 +61,10 @@ $color-ocean-blue-4: #02A1FF;
 $color-grey: #969696;
 $color-light-grey: #CACACA;
 $color-slight-grey-1: #E4E4E4;
+$color-font-outline-grey-1: #333;
 
 $color-white: #FFFFFF;
+$color-ui-common-quality:#E4E4E4;
+$color-ui-rare-quality: #9FC5E8;
+$color-ui-valuable-quality: #A3D399;
+$color-ui-unique-quality: #AE9BD4;
