--- a/src/ui/topBar/topBar.scss
+++ b/src/ui/topBar/topBar.scss
@@ -5,6 +5,7 @@
   height: 20px;
   position: relative;
   background-color: $color-grey;
+  pointer-events: all;
   
   font-family: "AUdimat", "Helvetica Neue", "Helvetica", "Arial", sans-serif;
   color: white;
