--- a/src/ui/eventRibbon/eventRibbon.scss
+++ b/src/ui/eventRibbon/eventRibbon.scss
@@ -7,6 +7,7 @@ $ribbon-height: 100px;
   width: 100%;
   height: 100%;
   color: white;
+  z-index: 1000;
   
   .event-text {
     position: absolute;
@@ -15,7 +16,7 @@ $ribbon-height: 100px;
     top: calc(100% + #{$ribbon-height});
     opacity: 0;
     font-size: 34px;
-    z-index: 110;
+    z-index: 1100;
     text-align: center;
 
     &.animated {
@@ -25,6 +26,7 @@ $ribbon-height: 100px;
     
     img.medium-icon {
       left: 40%;
+      top: 10%;
     }
   }
 
@@ -35,7 +37,7 @@ $ribbon-height: 100px;
     width: 100%;
     height: $ribbon-height;
     background-color: $color-green-3;
-    z-index: 100;
+    z-index: 1000;
 
     &.animated {
       animation-name: ribbon-anim;
