--- a/src/ui/planetManager/planetManager.scss
+++ b/src/ui/planetManager/planetManager.scss
@@ -1,4 +1,6 @@
 @import 'src/ui/_variables.scss';
+@import 'src/ui/planetManager/managerTabs/storage.scss';
+@import 'src/ui/planetManager/managerTabs/buildings.scss';
 
 .planet-manager-container {
   .management-tabs-select {
@@ -18,6 +20,12 @@
       transition: background 1s;
       min-width: 100px;
       
+      &.content-changed {
+        background: linear-gradient(0deg, $color-white, rgba(255, 255, 255, 0));
+        background-size: 100% 400%;
+        animation: bgFlash 2s;
+      }
+      
       &:last-child {
         border-right: none;
       }
@@ -35,19 +43,31 @@
     }
   }
   
-  .industry-label {
-    font-size: 32px;
-    -webkit-text-stroke: #333;
-    -webkit-text-stroke-width: 0.5px;
-  }
-  
   .manager-tab {
     > div {
       height: 420px;
     }
+    
+    .visualization-panel {
+      height: 200px;
+      margin-top: 10px;
+      background-color: $color-green-2;
+      margin-left: -12px;
+      margin-right: -12px;
+      // TODO REMAKE
+      .img-holder {
+        height: 190px;
+        overflow: hidden;
+        text-align: center;
 
+        > img {
+          width: 440px;
+          transform: scale(1.01);
+          padding-top: 10px;
+        }
+      }
+    }
   }
-  
   
   .manager-overview-container {
     .top-info {
@@ -59,7 +79,7 @@
         position: relative;
         font-size: 48px;
         margin: 0;
-        -webkit-text-stroke: #333;
+        -webkit-text-stroke: $color-font-outline-grey-1;
         -webkit-text-stroke-width: 0.5px;
         text-align: center;
         
@@ -80,7 +100,13 @@
       }
     }
   }
-  
+}
 
-
+@keyframes bgFlash {
+  	from {
+  	  background-position: 100% 100%;
+  	}
+	  to {
+	    background-position: 1000% 0%;
+	  }
 }
