--- a/src/ui/planetPanel/planetPanel.scss
+++ b/src/ui/planetPanel/planetPanel.scss
@@ -8,7 +8,7 @@ $panel-width: 440px;
   color: white;
   position: absolute;
   pointer-events: auto;
-  right: -$panel-width;
+  right: -($panel-width);
   transition: transform 1s;
 
   &.opening {
@@ -87,7 +87,8 @@ $panel-width: 440px;
   }
   
   .actions-panel {
-    margin-top: 24px;
+    margin-top: 12px;
+    min-height: 80%;
 
     .colonize-button {
       
@@ -118,16 +119,6 @@ $panel-width: 440px;
         position: absolute;
         height: 80px;
         left: 0;
-      }
-    }
-    
-    @keyframes progress {
-      from {
-        width: 0; 
-      }
-    
-      to {
-        width: 100%;
       }
     }
   }
@@ -177,4 +168,14 @@ $panel-width: 440px;
     background-color: grey;
   }
   
+}
+
+@keyframes progress {
+  from {
+    width: 0; 
+  }
+
+  to {
+    width: 100%;
+  }
 }
