--- a/src/ui/planetManager/managerTabs/buildings.scss
+++ b/src/ui/planetManager/managerTabs/buildings.scss
@@ -11,7 +11,7 @@
   .resources-info {
     .inventory-item {
       top: 10px;
-      transform: scale(0.7);
+      // transform: scale(0.7);
     }
   }
 
