--- a/src/ui/_index.scss
+++ b/src/ui/_index.scss
@@ -49,7 +49,7 @@ tooltip.tooltips {
   margin: 0 auto;
 }
 
-.text-shadow-outline {
+@mixin text-shadow-outline {
   -webkit-text-stroke-width: 0!important;
   text-shadow:
    -1px -1px 0 $color-font-outline-grey-1,  
@@ -58,9 +58,14 @@ tooltip.tooltips {
      1px 1px 0 $color-font-outline-grey-1;
 }
 
+.text-shadow-outline {
+  @include text-shadow-outline;
+}
+
 .empty-panel-label {
   text-align: center;
   color: $color-slight-grey-1;
+  margin: 24px 0;
 }
 
 .text-label {
@@ -87,4 +92,10 @@ tooltip.tooltips {
   position: relative;
   width: 100%;
   height: 100%;
+}
+
+.absolute-text-label {
+  position: absolute;
+  bottom: -1px;
+  left: 2px;
 }
